--- a/reports/sections/offshore_scallop/offshore_scallop_fr.rmd
+++ b/reports/sections/offshore_scallop/offshore_scallop_fr.rmd
@@ -42,7 +42,7 @@ Under the Collaborative Agreement, survey responsibilities are shared by DFO and
 Data requests are subject to the terms of the Collaborative Agreement. Please contact Freya Keyser (DFO Offshore Scallop Biologist, freya.keyser@dfo-mpo.gc.ca) with details on your request, and you will be guided through the Offshore Scallop Survey data request process. 
 
 
-#### ***Résultats des pétoncles offshore spécifiques à la zone***
+#### *Résultats des pétoncles offshore spécifiques à la zone*
 ```{r offshoreScallop-results, include=FALSE, cache=FALSE}
 # clip the data to the Study and Map areas:
 osOutputList <- master_intersect(offshoreScallop_rr$data_sf, 
@@ -99,7 +99,7 @@ if (!is.null(osOutputList$studyData)) {
 if (!is.null(osOutputList$studyData)) {
   if (nrow(osTable) > 0) {
      options(knitr.kable.NA = '--')
-    knitr::kable(osTable, align = "l", caption = paste("\\label{tab:offshoreScallop_table}", write_caption_blurb(offshoreScallop_rr, "FR"), "Couverture spatiale et temporelle du relevé du pétoncle hauturier, représentée en nombre de traits par année par banc pour la zone définie par l'utilisateur (contour rouge). L'absence d'enregistrement dans ce tableau doit être interprétée comme une absence de déclaration, pas nécessairement comme une absence de l'espèce dans la zone. Des données sur la coquille Saint-Jacques d'Islande ont été collectées sur Banquereau en 2006, 2012 et 2019."), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "center")
+    knitr::kable(osTable, align = "l", caption = paste("\\label{tab:offshoreScallop_table}", write_caption_blurb(offshoreScallop_rr, "FR"), "Couverture spatiale et temporelle du relevé du pétoncle hauturier, représentée en nombre de traits par année par banc pour la zone définie par l'utilisateur (contour rouge). L'absence d'enregistrement dans ce tableau doit être interprétée comme une absence de déclaration, pas nécessairement comme une absence de l'espèce dans la zone. Des données sur la coquille Saint-Jacques d'Islande ont été collectées sur Banquereau en 2006, 2012 et 2019."), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "center")
   }
 }
 ```
