--- a/app/templates/EN/species/fish_invertebrates_ceteaceans.Rmd
+++ b/app/templates/EN/species/fish_invertebrates_ceteaceans.Rmd
@@ -15,6 +15,9 @@ editor_options:
 ```{r child = here::here("reports/sections/ilts/ilts_en.Rmd")}
 ```
 
+```{r child = here::here("reports/sections/offshore_scallop/offshore_scallop_en.Rmd")}
+```
+
 ```{r child = here::here("reports/sections/isdb-marfis/isdbMarfis_en.Rmd")}
 ```
 
