--- a/app/templates/FR/species/fish_invertebrates_ceteaceans.Rmd
+++ b/app/templates/FR/species/fish_invertebrates_ceteaceans.Rmd
@@ -18,6 +18,9 @@ La présente section décrit les résultats tirés des sources de données suiva
 ```{r child = here::here("reports/sections/ilts/ilts_fr.Rmd")}
 ```
 
+```{r child = here::here("reports/sections/offshore_scallop/offshore_scallop_fr.Rmd")}
+```
+
 ```{r child = here::here("reports/sections/isdb-marfis/isdbMarfis_fr.Rmd")}
 ```
 
