--- a/reports/sections/crithab/crithab_en.Rmd
+++ b/reports/sections/crithab/crithab_en.Rmd
@@ -20,20 +20,19 @@ if (FALSE) { #load in data:
 ### **Critical Habitat of Species at Risk** {#crithab-section}   
 
 ```{r crithab-load, include=FALSE}
-load_rdata(c("crithab_rr", "leatherback_rr"), regionStr, env = environment())
+load_rdata(c("crithab_rr"), regionStr, env = environment())
 ```
 
 ```{r crtihab-meta, results='asis'}
 write_meta(crithab_rr, "EN")
 ```
-Data use constraints for Leatherback Sea Turtle draft critical habitat: DFO INTERNAL USE ONLY
 
 Dataset description from the Open Data record [@OpenData_SARcriticalhabitat]:
 ```{r crithab-text, results='asis'}
 writeLines(noquote(crithab_rr$text$en))
 ```
 
-Critical habitat presented in this section are available in the Government of Canada Open Data portal, with the exception of draft critical habitat for Leatherback Sea Turtle, for which delineation of critical habitat is currently under review. Draft critical habitat for Leatherback Sea Turtle is available in the internal Species at Risk GIS tool and will be available in Open Data once it has been included in a proposed or final Recovery Strategy.
+Critical habitat presented in this section are available in the Government of Canada Open Data portal, with the exception of draft critical habitat, for which delineation of critical habitat is currently under review. Draft critical habitat is available in the internal Species at Risk GIS tool and will be available in Open Data once it has been included in a proposed or final Recovery Strategy.
 
 
 ##### *Area-Specific Critical Habitat Search Results*
@@ -43,10 +42,7 @@ Critical habitat presented in this section are available in the Government of Ca
 legendNameCrithab <- "Common Name"
 outputListCrithab <- master_intersect(crithab_rr$data_sf, mapDataList)
 
-# plotted in single colour
-outputListLB <- master_intersect(leatherback_rr$data_sf, mapDataList)
-
-critHabCheck <- !is.null(outputListCrithab$studyData) | !is.null(outputListLB$studyData)
+critHabCheck <- !is.null(outputListCrithab$studyData)
 
 summaryIntroTable <- add_row_to_intro_summary(summaryIntroTable, name="[Critical Habitat](#crithab-section)", result=critHabCheck)
 
@@ -55,7 +51,7 @@ summaryIntroTable <- add_row_to_intro_summary(summaryIntroTable, name="[Critical
 
 ```{r crithab-table-gen, echo=FALSE, results='asis'}
 if (critHabCheck) {
-  critTable <- table_crit(outputListCrithab$studyData, outputListLB$studyData, "EN")  
+  critTable <- table_crit(outputListCrithab$studyData, "EN")  
   summaryHabTable <- add_to_hab_summary(summaryHabTable, "CH", "[SAR Critical Habitat](#crithab-section)", critTable, "Common Name", "Common Name")
 }
 ```
@@ -92,15 +88,4 @@ if (!is.null(outputListCrithab$mapData)){
              legendName = legendNameCrithab, outlines=FALSE, colorMap = critPlotList$colorMap)
 }  
 ```
-<br>
-```{r leatherback-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(leatherback_rr, "EN"), 'Draft critical habitat of Leatherback Sea Turtle, relative to the search area. Draft critical habitat for the species is based on information DFO published as an update to Science advice regarding important habitat for the Leatherback Sea Turtle: https://www.dfo-mpo.gc.ca/csas-sccs/Publications/ScR-RS/2020/2020_041-eng.html')}
-if (!is.null(leatherback_rr$data_sf)){
-  plot_rr_sf(regionMap, leatherback_rr$data_sf, leatherback_rr$attribute)
-}   
-```
-<br>
-```{r leatherback-area-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(leatherback_rr, "EN"), 'Draft critical habitat of Leatherback Sea Turtle located within the search area (red outline).')}
-if (!is.null(outputListLB$mapData)){
-  plot_rr_sf(areaMap, outputListLB$mapData, leatherback_rr$attribute)
-}
-```
+
