updated sardist for sde data

--- a/reports/sections/sardist/sardist_en.Rmd
+++ b/reports/sections/sardist/sardist_en.Rmd
@@ -44,9 +44,14 @@ summaryIntroTable <- add_row_to_intro_summary(summaryIntroTable, name="[SAR Dist
 ```
 
 ```{r sardist-sum-tables, echo=FALSE, results='asis'}
-distTable <- create_sar_tables(outputListSardist$studyData, listed_species, extraCols = c("Population", "Species_Link"))$sarData
-names(distTable)[names(distTable) == 'Species_Link'] <- 'Species Link'
+distTable <- NULL
+if (!is.null(outputListSardist$studyData)) {
+  distTable <- outputListSardist$studyData
+  distTable <- sf::st_drop_geometry(distTable)
+  names(distTable) <- c("Scientific Name", "Common Name", "Species Link", "Population", "SARA Status")
+}
 
+  
 summaryHabTable <- add_to_hab_summary(summaryHabTable, "range", "[SAR Distribution](#sardist-section)",  distTable, "Common Name", "Common Name")
 
 plotHeight <- 7
