--- a/reports/sections/sarsearch/sarsearch_en.rmd
+++ b/reports/sections/sarsearch/sarsearch_en.rmd
@@ -6,7 +6,7 @@ output:
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
 
-```{r template-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
+```{r sarsearch-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
 ```
 
 ```{r eval=FALSE}
@@ -19,56 +19,88 @@ if (FALSE) {
 }
 ```
 
-### **Template Section Title** {#template-section}
+### **Sarsearch DMapps Data** {#sarsearch-section}
 
-```{r template-load, include=FALSE}
+```{r sarsearch-load, include=FALSE}
 # load in section specific data
-load_rdata(c("template_rr"), regionStr, env = environment())
+load_rdata(c("sarsearch_rr"), regionStr, env = environment())
 
 ```
 
-```{r template-meta, results='asis'}
+```{r sarsearch-meta, results='asis'}
 # metadata blurb at start of each section
-write_meta(template_rr, "EN")
+write_meta(sarsearch_rr, "EN")
 ```
 
-ADD SECTION TEXT HERE.
+Species data collected in the Sarsearch application (part of DFO's DMapps suite) was extracted and is presented below.
+-	The data originates from both external and internal sources, and must not to be shared or used outside DFO. 
+-	The data is not comprehensive in any way. It is likely that there are records of occurrence for any given species that have not been included or represented and likely does not represent the latest records, findings, or distribution for any given species. 
+-	Although the data is accurate based on its original source, it is from a variety of sources and varies in quality depending on the source for any given record.
+-	While every reasonable effort has been made to ensure that the data is correct, DFO Species at Risk Program does not warrant or guarantee the accuracy, completeness, or currency of the data for any specific use. 
+-	Data that are represented only by “Regions” in the record and/or the map only implies that the species has been found in the specified region(s). “Regions” must not be used as polygons of distribution.
+-	A data point can either represent the exact location at which a species was found or may be used to indicate the presence of a species in any given waterbody. Please consult all information for any given record before making any interpretation. 
 
 
-#### *Area-specific Template results*
-```{r template-results, include=FALSE, cache=FALSE}
+
+#### *Area-specific Sarsearch results*
+```{r sarsearch-results, include=FALSE, cache=FALSE}
 # clip the data to the Study and Map areas:
-templateOutputList <- master_intersect(template_rr$data_sf, mapDataList)
+outputList <- master_intersect(sarsearch_rr$data_sf, mapDataList, getRegion = TRUE)
 
-# Create tables based off of the Scientific Name column, one with all species found,
-# and one with only the Species at Risk found.
-tableList <- create_sar_tables(templateOutputList$studyData, listed_species)
-templateAllTable <- tableList$allSpecies
-templateSarTable <- tableList$sarData
+
+# summary intro table
+introResult <- !is.null(outputList$studyData)
+summaryIntroTable <- add_row_to_intro_summary(summaryIntroTable, name="[Sarsearch DMapp](#sarsearch-section)", result=introResult)
+
+
+sarsearchTable <- sf::st_drop_geometry(outputList$studyData)
+sarsearchTable <- dplyr::select(sarsearchTable, c(species_name, year, name, source, notes))
+names(sarsearchTable) <- c("Species Name", "Year", "Location Name", "Source", "Notes")
+sarsearchTable[is.na(sarsearchTable)] <- ""
+row.names(sarsearchTable) <- NULL
+
 ```
 
-```{r template-check, echo=FALSE, results='asis',}
+```{r sarsearch-check, echo=FALSE, results='asis',}
 # Check if there is any data in the study area
-templateReport <- if (is.null(templateOutputList$studyData)) {
-  "* There are no relevant template records for this search area."
+sarsearchReport <- if (is.null(outputList$studyData)) {
+  "* There are no relevant Sarsearch records for this search area."
 } else {
-  "* There are relevant template records for this search area."
+  "* There are relevant Sarsearch records for this search area."
 }
-writeLines(noquote(templateReport))
+writeLines(noquote(sarsearchReport))
 ```
 
-```{r template-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(template_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from template records.')}
-if (!is.null(templateOutputList$studyData)) {
-  # common plotting function:
-  plot_rr_sf(areaMap, templateOutputList$mapData, attribute = 
-               template_rr$attribute)
+```{r sarsearch-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(sarsearch_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from Sarsearch records.')}
+if (!is.null(outputList$regionData)) {
+  pointData <- outputList$regionData[sf::st_is(outputList$regionData$geometry, c("POINT", "MULTIPOINT")), ]
+  lineData <- outputList$regionData[sf::st_is(outputList$regionData$geometry, "LINESTRING"), ]
+  polyData <- outputList$regionData[sf::st_is(outputList$regionData$geometry, "POLYGON"), ]
+  
+  polyMap <- plot_rr_sf(regionMap, polyData, attribute = sarsearch_rr$attribute, alpha = 0.5)
+  lineMap <- plot_rr_sf(polyMap, lineData)
+  plot_rr_sf(lineMap, pointData, attribute = sarsearch_rr$attribute)
+}
+```
+
+```{r sarsearch-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(sarsearch_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from Sarsearch records.')}
+if (!is.null(outputList$studyData)) {
+  pointData <- outputList$mapData[sf::st_is(outputList$mapData$geometry, c("POINT", "MULTIPOINT")), ]
+  lineData <- outputList$mapData[sf::st_is(outputList$mapData$geometry, "LINESTRING"), ]
+  polyData <- outputList$mapData[sf::st_is(outputList$mapData$geometry, "POLYGON"), ]
+  
+  polyMap <- plot_rr_sf(areaMap, polyData, attribute = 
+               sarsearch_rr$attribute, alpha = 0.5)
+  lineMap <- plot_rr_sf(polyMap, lineData)
+  plot_rr_sf(lineMap, pointData, attribute = 
+               sarsearch_rr$attribute)
 }
 ```
 <br>
-```{r template-table}
-if (!is.null(templateOutputList$studyData)) {
-  if (nrow(templateSarTable) > 0) {
-    knitr::kable(templateSarTable, align = "l", caption = paste("\\label{tab:template_table}", write_caption_blurb(template_rr, "EN"), "Template records of species contained within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Frequency represents the subset of the sampling locations out of the total where each species is present. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+```{r sarsearch-table}
+if (!is.null(outputList$studyData)) {
+  if (nrow(sarsearchTable) > 0) {
+    knitr::kable(sarsearchTable, align = "l", caption = paste("\\label{tab:sarsearch_table}", write_caption_blurb(sarsearch_rr, "EN"), "Sarsearch records of species contained within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Frequency represents the subset of the sampling locations out of the total where each species is present. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
