--- a/reports/sections/sarsearch/sarsearch_en.rmd
+++ b/reports/sections/sarsearch/sarsearch_en.rmd
@@ -32,7 +32,7 @@ load_rdata(c("sarsearch_rr"), regionStr, env = environment())
 write_meta(sarsearch_rr, "EN")
 ```
 
-Species data collected in the SAR search application (part of DFO's DMapps suite) was extracted and is presented below.
+Species data collected in the Species At Risk (SAR) search application (part of DFO's DMapps suite) was extracted and is presented below.
 -	The data originates from both external and internal sources, and must not to be shared or used outside DFO. 
 - Sources include data mining from COSEWIC reports.
 -	The data is not comprehensive in any way. It is likely that there are records of occurrence for any given species that have not been included or represented and likely does not represent the latest records, findings, or distribution for any given species. 
@@ -64,9 +64,9 @@ row.names(sarsearchTable) <- NULL
 ```{r sarsearch-check, echo=FALSE, results='asis',}
 # Check if there is any data in the study area
 sarsearchReport <- if (is.null(outputList$studyData)) {
-  "* There are no relevant Sarsearch records for this search area."
+  "* There are no relevant SAR search records for this search area."
 } else {
-  "* There are relevant Sarsearch records for this search area."
+  "* There are relevant SAR search records for this search area."
 }
 writeLines(noquote(sarsearchReport))
 ```
@@ -100,7 +100,7 @@ if (!is.null(outputList$studyData)) {
 ```{r sarsearch-table}
 if (!is.null(outputList$studyData)) {
   if (nrow(sarsearchTable) > 0) {
-    knitr::kable(sarsearchTable, align = "l", caption = paste("\\label{tab:sarsearch_table}", write_caption_blurb(sarsearch_rr, "EN"), "Sarsearch records of species contained within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Frequency represents the subset of the sampling locations out of the total where each species is present. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(sarsearchTable, align = "l", caption = paste("\\label{tab:sarsearch_table}", write_caption_blurb(sarsearch_rr, "EN"), "SAR search records of species contained within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Frequency represents the subset of the sampling locations out of the total where each species is present. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
