--- a/reports/sections/isleMadame/presence_sections/bnWhale_en.rmd
+++ b/reports/sections/isleMadame/presence_sections/bnWhale_en.rmd
@@ -15,7 +15,7 @@ bibliography: '`r here::here("app/data/mybiblio.bib")`'
 # Generate a section for each dataset
 ###
 childRmd <- here::here("reports/sections/isleMadame/isleMadame_en.rmd")
-out <-  knitr::knit_expand(childRmd, imSection = "bnWhale", cols =  'c("OVERALL_PRESENCE","LIFE_STAGE", "RELATIVE_DISTRIBUTION", "RELATIVE_ABUNDANCE")', colnames = 'c("Overall Presence", "Lifestage", "Relative distribution", "Relative Abundance")')
+out <-  knitr::knit_expand(childRmd, imSection = "bnWhale", cols =  'c("OVERALL_PRESENCE", "LIFE_STAGE", "RELATIVE_DISTRIBUTION", "RELATIVE_ABUNDANCE", "IMPORTANCE_RATIONALE")', colnames = 'c("Overall Presence", "Lifestage", "Relative distribution", "Relative Abundance", "Importance Rationale")')
 
 res = knitr::knit_child(text = unlist(out), quiet = TRUE)
 cat(res, sep = "\n")
