Moved environmental response section to its own customized RR

--- a/app/templates/EN/custom/envresponse.Rmd
+++ b/app/templates/EN/custom/envresponse.Rmd
@@ -9,4 +9,7 @@ output:
     toc: yes
 ---
     
-# Part 1 
+# Environmental Response 
+
+```{r child = here::here("reports/sections/isleMadame/isleMadameFull_en.Rmd")}
+```
