--- a/reports/sections/asf/asf_fr.Rmd
+++ b/reports/sections/asf/asf_fr.Rmd
@@ -20,27 +20,24 @@ if (FALSE) { #load in data:
 ```{r child = here::here("reports/sections/commonSections/commonCet.Rmd")}
 ```
 
-### **Atlantic salmon rivers of Eastern North America** {#asf-section}
+### **Atlantic Salmon rivers of Eastern North America** {#asf-section}
 
 ```{r asf-load, include=FALSE}
 load_rdata(c("asf_rr"), "MAR", env = environment())
 ```
 
 ```{r asf-meta, results='asis'}
-write_meta(asf_rr, "EN")
+write_meta(asf_rr, "FR")
 ```
 
-This dataset comprises the rivers of Eastern North America with each river classified with the Atlantic salmon stock status for that river. The stock status of the rivers was developed by the North Atlantic Salmon Conservation Organization (NASCO). This layer was produced by the Atlantic Salmon Federation with cartographic work and design by As the Crow Flies cARTography. The geospatial component for the rivers was derived from the CanVec 1:50,000 hydrographic layer (<https://open.canada.ca/data/en/dataset/9d96e8c9-22fe-4ad2-b5e8-94a6991b744b>) and the US National Hydrography Dataset 1:100,000 data (<https://www.usgs.gov/national-hydrography/national-hydrography-dataset>).
+Cet ensemble de données comprend les rivières de l’est de l’Amérique du Nord, chacune d’entre elles étant classée en fonction de l’état du stock de saumon atlantique pour cette rivière. L’état des stocks des rivières a été élaboré par l’Organisation pour la conservation du saumon de l’Atlantique Nord (OCSAN). Cette couche a été produite par la Fédération du saumon atlantique avec le travail de cartographie et de conception d’As the Crow Flies cARTography. La composante géospatiale des rivières a été dérivée de la couche hydrographique CanVec 1:50 000. (https://open.canada.ca/data/fr/dataset/9d96e8c9-22fe-4ad2-b5e8-94a6991b744b et les données américaines du National Hydrography Dataset 1:100 000 (https://www.usgs.gov/national-hydrography/national-hydrography-dataset). 
+ 
+Pour obtenir de plus amples renseignements : 
+-   Fédération Du Saumon Atlantique PO Box 5200 St. Andrews, Nouveau-Brunswick, E5B 3S8, Canada 
+-   Site Internet: https://www.asf.ca/ Organisation pour la conservation du saumon de l’Atlantique Nord : (https://nasco.int/) 
+-   As the Crow Flies cARTography (http://www.atcfc.ca/)
 
-For more information: -
-
--   Atlantic Salmon Federation PO Box 5200 St. Andrews, New Brunswick, Canada, E5B 3S8. Website: (<https://www.asf.ca/>)
-
--    North Atlantic Salmon Conservation Organization: (<https://nasco.int/>)
-
--    As the Crow Flies cARTography: (<http://www.atcfc.ca/>)
-
-##### *Area-Specific Atlantic salmon rivers of Eastern North America Search Results*
+##### *Area-Specific Atlantic Salmon rivers of Eastern North America Search Results*
 
 ```{r asf-results, include=FALSE, cache=FALSE}
 asfClipped <- master_intersect(asf_rr$data_sf, mapDataList)
@@ -61,9 +58,9 @@ if (!is.null(asfClipped$studyData)) {
 
 ```{r asf-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_asf <- if (is.null(asfClipped$studyData)) {
-   "* There are no relevant records in the Atlantic salmon rivers of Eastern North America for this search area."
+   "* There are no relevant records in the Atlantic Salmon rivers of Eastern North America for this search area."
  } else {
-   "* There are relevant records in the Atlantic salmon rivers of Eastern North America for this search area."
+   "* There are relevant records in the Atlantic Salmon rivers of Eastern North America for this search area."
  }
 writeLines(Report_asf)
 ```
@@ -73,14 +70,14 @@ writeLines(Report_asf)
 ```{r asf-table}
 if (!is.null(asfClipped$studyData)) {
   if (nrow(asfTable) > 0) {
-    knitr::kable(asfTable, align="l", caption=paste("\\label{tab:asf_table}", write_caption_blurb(asf_rr, "EN"),  "Atlantic salmon rivers of Eastern North America present in the study area selected by the user</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(asfTable, align="l", caption=paste("\\label{tab:asf_table}", write_caption_blurb(asf_rr, "FR"),  "Atlantic salmon rivers of Eastern North America present in the study area selected by the user</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
 
 <br>
 
-```{r asf-plot, fig.height=8, fig.width=11, fig.cap=paste(write_caption_blurb(asf_rr, "EN"), 'Map of Atlantic salmon rivers of Eastern North America present in the study area selected by the user')}
+```{r asf-plot, fig.height=8, fig.width=11, fig.cap=paste(write_caption_blurb(asf_rr, "FR"), 'Map of Atlantic salmon rivers of Eastern North America present in the study area selected by the user')}
 if (!is.null(asfClipped$studyData)) {
   plot_rr_sf(areaMap, asfClipped$mapData, attribute=asf_rr$attribute, lwd = 0.7)
 }
