--- a/reports/sections/asf/asf_en.Rmd
+++ b/reports/sections/asf/asf_en.Rmd
@@ -61,9 +61,9 @@ if (!is.null(asfClipped$studyData)) {
 
 ```{r asf-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_asf <- if (is.null(asfClipped$studyData)) {
-   "* There are no relevant records in the Atlantic Salmon rivers of Eastern North America for this search area."
+   "* There are no relevant records for Atlantic Salmon rivers of Eastern North America for this search area."
  } else {
-   "* There are relevant records in the Atlantic Salmon rivers of Eastern North America for this search area."
+   "* There are relevant records for Atlantic Salmon rivers of Eastern North America for this search area."
  }
 writeLines(Report_asf)
 ```
@@ -73,7 +73,7 @@ writeLines(Report_asf)
 ```{r asf-table}
 if (!is.null(asfClipped$studyData)) {
   if (nrow(asfTable) > 0) {
-    knitr::kable(asfTable, align="l", caption=paste("\\label{tab:asf_table}", write_caption_blurb(asf_rr, "EN"),  "Atlantic salmon rivers of Eastern North America present in the study area selected by the user</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(asfTable, align="l", caption=paste("\\label{tab:asf_table}", write_caption_blurb(asf_rr, "EN"),  "Names and status of Atlantic salmon rivers of Eastern North America present in the study area selected by the user</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
