--- a/app/templates/EN/species/fish_invertebrates_ceteaceans.Rmd
+++ b/app/templates/EN/species/fish_invertebrates_ceteaceans.Rmd
@@ -27,6 +27,9 @@ editor_options:
 ```{r child = here::here("reports/sections/asf/asf_en.Rmd")}
 ```
 
+```{r child = here::here("reports/sections/sarsearch/sarsearch_en.Rmd")}
+```
+
 ```{r child = here::here("reports/sections/ocearch/ocearch_en.Rmd")}
 ```
 
