--- a/reports/sections/sarsearch/sarsearch_en.rmd
+++ b/reports/sections/sarsearch/sarsearch_en.rmd
@@ -61,8 +61,8 @@ summaryIntroTable <- add_row_to_intro_summary(summaryIntroTable, name="[SAR sear
 
 
 sarsearchTable <- sf::st_drop_geometry(outputList$studyData)
-sarsearchTable <- dplyr::select(sarsearchTable, c(species_name, year, name, source, notes))
-names(sarsearchTable) <- c("Species Name", "Year", "Location Name", "Source", "Notes")
+sarsearchTable <- dplyr::select(sarsearchTable, c(species_name, year, name, source, record_type, notes))
+names(sarsearchTable) <- c("Species Name", "Year", "Location Name", "Source", "Geometry Type", "Notes")
 sarsearchTable[is.na(sarsearchTable)] <- ""
 row.names(sarsearchTable) <- NULL
 
@@ -81,22 +81,26 @@ writeLines(noquote(sarsearchReport))
 ```{r sarsearch-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(sarsearch_rr, "EN"), 'SAR search results within the region and the search area defined by the user (red outline). The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
 if (!is.null(outputList$regionData)) {
   pointData <- outputList$regionData[sf::st_is(outputList$regionData$geometry, c("POINT", "MULTIPOINT")), ]
-  lineData <- outputList$regionData[sf::st_is(outputList$regionData$geometry, "LINESTRING"), ]
-  polyData <- outputList$regionData[sf::st_is(outputList$regionData$geometry, "POLYGON"), ]
+  lineData <- outputList$regionData[sf::st_is(outputList$regionData$geometry, c("LINESTRING", "MULTILINESTRING")), ]
+  polyData <- outputList$regionData[sf::st_is(outputList$regionData$geometry, c("POLYGON", "MULTIPOLYGON")), ]
   
-  plot_rr_sf(regionMap, pointData, attribute = "NONE")
+  polyMap <- plot_rr_sf(regionMap, polyData, attribute = "NONE", alpha = 0.5)
+  lineMap <- plot_rr_sf(polyMap, lineData)
+  plot_rr_sf(lineMap, pointData, attribute = "NONE")
 }
 ```
 
 ```{r sarsearch-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(sarsearch_rr, "EN"), 'SAR search results within the search area defined by the user (red outline).The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
 if (!is.null(outputList$studyData)) {
   pointData <- outputList$mapData[sf::st_is(outputList$mapData$geometry, c("POINT", "MULTIPOINT")), ]
-  lineData <- outputList$mapData[sf::st_is(outputList$mapData$geometry, "LINESTRING"), ]
-  polyData <- outputList$mapData[sf::st_is(outputList$mapData$geometry, "POLYGON"), ]
+  lineData <- outputList$mapData[sf::st_is(outputList$mapData$geometry, c("LINESTRING", "MULTILINESTRING")), ]
+  polyData <- outputList$mapData[sf::st_is(outputList$mapData$geometry, c("POLYGON", "MULTIPOLYGON")), ]
   
-  
-  plot_rr_sf(areaMap, pointData, attribute = 
-               sarsearch_rr$attribute)
+  polyMap <- plot_rr_sf(areaMap, polyData, attribute = sarsearch_rr$attribute, 
+                        alpha = 0.5)
+  lineMap <- plot_rr_sf(polyMap, lineData)
+  plot_rr_sf(lineMap, pointData, attribute = sarsearch_rr$attribute)
+ 
 }
 ```
 
