--- a/reports/sections/sarsearch/sarsearch_en.rmd
+++ b/reports/sections/sarsearch/sarsearch_en.rmd
@@ -97,7 +97,7 @@ if (!is.null(outputList$studyData)) {
   polyData <- outputList$mapData[sf::st_is(outputList$mapData$geometry, c("POLYGON", "MULTIPOLYGON")), ]
   
   polyMap <- plot_rr_sf(areaMap, polyData, attribute = sarsearch_rr$attribute, 
-                        alpha = 0.5)
+                        alpha = 0.5, legendName="Species")
   lineMap <- plot_rr_sf(polyMap, lineData)
   plot_rr_sf(lineMap, pointData, attribute = sarsearch_rr$attribute)
  
@@ -109,7 +109,7 @@ if (!is.null(outputList$studyData)) {
 ```{r sarsearch-table}
 if (!is.null(outputList$studyData)) {
   if (nrow(sarsearchTable) > 0) {
-    knitr::kable(sarsearchTable, align = "l", caption = paste("\\label{tab:sarsearch_table}", write_caption_blurb(sarsearch_rr, "EN"), "SAR search records of species contained within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Frequency represents the subset of the sampling locations out of the total where each species is present. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(sarsearchTable, align = "l", caption = paste("\\label{tab:sarsearch_table}", write_caption_blurb(sarsearch_rr, "EN"), "SAR search records contained within the search area. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
