--- a/reports/sections/isdb-marfis/isdbMarfis_en.Rmd
+++ b/reports/sections/isdb-marfis/isdbMarfis_en.Rmd
@@ -50,7 +50,6 @@ The Maritimes Fishery Information System (MARFIS) is a DFO database, managed by 
 ##### *Area-Specific MARFIS & ISDB Search Results*
 
 ```{r marfis-isdb-results, include=FALSE, cache=FALSE}
-
 outputListI <- master_intersect(isdb_rr$data_sf, mapDataList)
 outputListM <- master_intersect(marfis_rr$data_sf, mapDataList)
 
@@ -63,15 +62,15 @@ introResultM <- !is.null(outputListM$studyData)
 summaryIntroTable <- add_row_to_intro_summary(summaryIntroTable, name="[MARFIS](#MARFIS-section)", result=introResultM)
 
 
-tableList <- create_table_ISDB(outputListI$studyData, isdbSpeceis_df, listed_species)
-isdbAllTableList <- tableList$allSpeciesNafoList
+tableList <- create_table_ISDB(outputListI$studyData, isdbSpecies_df, listed_species)
+isdbAllTable <- tableList$allSpecies
 isdbSarTable <- tableList$sarData
 summarySarTable <- add_col_to_sar_summary(summarySarTable, "[ISDB](#ISDB-section)", isdbSarTable, "Common Name", "Common Name")
 
-tableList <- create_table_MARFIS(outputListM$studyData, listed_species, speciesTable = MARFISSPECIESCODES)
-marfisAllTable <- tableList$allSpeciesData
+tableList <- create_table_MARFIS(outputListM$studyData, marfisSpeceis_df, listed_species)
+marfisAllTable <- tableList$allSpecies
 marfisSarTable <- tableList$sarData
-summarySarTable <- add_col_to_sar_summary(summarySarTable, "[MARFIS](#MARFIS-section)", marfisSarTable, "Common Name", "Records")
+summarySarTable <- add_col_to_sar_summary(summarySarTable, "[MARFIS](#MARFIS-section)", marfisSarTable, "Common Name", "Common Name")
 ```
 *
 ```{r isdb-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
@@ -96,13 +95,13 @@ writeLines(Report_marfis)
 ```
 
 
-```{r ISDB-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(ebsa_rr, "EN"), 'Map showing NAFO areas containing ISDB records within the search area (red outline).')}
+```{r ISDB-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(isdb_rr, "EN", constraints=TRUE), 'Map showing NAFO areas containing ISDB and MARFIS records within the search area (red outline).')}
 if(!is.null(isdb_rr$data_sf)){
   plot_rr_sf(regionMap,isdb_rr$data_sf, isdb_rr$attribute, alpha=0.5)
 }
 ```
 
-```{r ISDB-area-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(ebsa_rr, "EN"), 'Map showing NAFO areas containing ISDB records within the search area (red outline).')}
+```{r ISDB-area-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(isdb_rr, "EN", constraints=TRUE), 'Map showing NAFO areas containing ISDB and MARFIS records within the search area (red outline).')}
 if(!is.null(outputListI$studyData)){
   labelData <- sf::st_centroid(outputListI$mapData)
   plot_rr_sf(areaMap, outputListI$mapData, isdb_rr$attribute, alpha=0.5, labelData=labelData, labelAttribute="NAFO")
@@ -113,25 +112,24 @@ if(!is.null(outputListI$studyData)){
 ```{r isdb-SAR-table}
 if (!is.null(isdbSarTable)) {
     if (nrow(isdbSarTable) > 0) {
-/
-knitr::kable(isdbSarTable, align="l", caption=paste(write_caption_blurb(isdb_rr, "EN"), "Industry Survey Database (ISDB) records of species observed within the search area and listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(isdbSarTable, align="l", caption=paste(write_caption_blurb(isdb_rr, "EN", constraints=TRUE), "Industry Survey Database (ISDB) records of species observed within the search area and listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
       }
   } 
 ```
-<br><br>
-```{r isdb-all-table results="asis"}
-if (!is.null(isdbAllTableList)) {
-  for(tableIndex in seq_along(isdbAllTableList)) {
-    print(knitr::kable(isdbAllTableList[[tableIndex]], align="l", caption = names(isdbAllTableList)[tableIndex], booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
-    )
-  }
-} 
+
+
+```{r isdb-all-table}
+if (!is.null(isdbAllTable)) {
+    if (nrow(isdbAllTable) > 0) {
+knitr::kable(isdbAllTable, align="l", caption=paste(write_caption_blurb(isdb_rr, "EN", constraints=TRUE), "Industry Survey Database (ISDB) records of species observed within the search area broken down by NAFO subunit. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+      }
+  } 
 ```
 
 ```{r marfis-SAR-table}
 if (!is.null(marfisSarTable)) {
     if (nrow(marfisSarTable) > 0) {
-  knitr::kable(marfisSarTable, align="l", caption=paste(write_caption_blurb(marfis_rr, "EN"), "Maritimes Fishery Information System (MARFIS) records of species observed within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(marfisSarTable, align="l", caption=paste(write_caption_blurb(marfis_rr, "EN", constraints=TRUE), "Maritimes Fishery Information System (MARFIS) records of species observed within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
       }
   } 
 ```
@@ -139,7 +137,7 @@ if (!is.null(marfisSarTable)) {
 ```{r marfis-all-table}
 if (!is.null(marfisAllTable)) {
       if (nrow(marfisAllTable) > 0) {
-  knitr::kable(marfisAllTable, caption=paste(write_caption_blurb(marfis_rr, "EN"), "Maritimes Fishery Information System (MARFIS) records of <u>all species</u> observed within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(marfisAllTable, caption=paste(write_caption_blurb(marfis_rr, "EN", constraints=TRUE), "Maritimes Fishery Information System (MARFIS) records of <u>all species</u> observed within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
       }
   }
 
